--- a/.gitignore
+++ b/.gitignore
@@ -52,7 +52,6 @@ yarn-error.log
 .history/*
 
 # Miscellaneous
-/.angular/cache
 .sass-cache/
 /connect.lock
 /coverage
@@ -69,3 +68,7 @@ node_modules/
 .vscode
 .angular
 dist/
+
+.mvn/
+
+target/
